--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -1,18 +1,33 @@
-.videoContainer {
+.container {
   width: 20%;
-  padding: 4px;
+  padding: 0.2em;
+  /* padding: 4px; */
+}
+.container.list-v {
+  flex: 1 1 20%;
+}
+.container.list-h {
+  flex: 1 1 100%;
+}
+
+.container.list-h .thumbImg {
+  width: 30%;
 }
 .video {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
   border: 1px solid #c0c0c0;
   cursor: pointer;
+  transition: transform 250ms ease-in;
   transition: all 0.2s ease-in;
 }
 .video:hover {
   transform: scale(1.01);
   box-shadow: 3px 3xp 5px 0px rgba(191, 191, 191 0.53);
 }
-.thumImg {
+.thumbImg {
   width: 100%;
 }
 .titleData {
