--- a/src/components/searchBar/searchBar.css
+++ b/src/components/searchBar/searchBar.css
@@ -8,16 +8,25 @@
   background-color: #fff;
   justify-content: space-between;
   align-items: center;
+  z-index: 1000;
 }
 .logoImg {
   width: 70px;
+}
+.logoArea {
+  display: flex;
+}
+.logoArea .leftMenuBtn {
+  margin-right: 20px;
+  padding: 10px;
 }
 .searchInputArea {
   display: flex;
   align-items: center;
 }
 .searchInput {
-  width: 500px;
+  /* width: 500px; */
+  width: 35vw;
   height: 40px;
   padding-left: 10px;
   margin-right: 4px;
@@ -27,8 +36,12 @@
 }
 .searchBtn {
   background-color: #f3f3f3;
-  border: 1px solid #dfdfdf;
-  padding: 10px;
+  /* padding: 10px; padding 말고 width 주기*/
+  width: 60px;
+  height: 40px;
+  border-bottom: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-top: 1px solid #dfdfdf;
 }
 .searchBtn img {
   width: 24px;
@@ -40,4 +53,25 @@ button {
   background: none;
   outline: none;
   border: none;
+  border: none;
+}
+.micBtn {
+  background: none;
+  padding: 10px;
+  margin-left: 4px;
+}
+.micBtn i {
+  color: #525252;
+  font-size: 24px;
+}
+.topMenuArea {
+  display: flex;
+}
+.topMenuArea .rightMenuBtn {
+  padding: 10px;
+  margin-left: 8px;
+}
+.topMenuArea .rightMenuBtn i {
+  color: #a7a5a5;
+  font-size: 20px;
 }
