feat: add pages and routes

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
 .list {
   flex: 1 1 30%;
 }
+.contents-wrap {
+  display: flex;
+}
+.contents-wrap .sideBar {
+  flex: 0 0 70px;
+}
 @media screen and (max-width: 1200px) {
   .contents {
     flex-direction: column;
