--- a/src/components/videoview/videoview.css
+++ b/src/components/videoview/videoview.css
@@ -11,3 +11,11 @@
 .txtContainer p {
   font-size: 14px;
 }
+
+.txtContainer p.desc {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
